rename test to staging in shibboleth conf files

--- a/nginx_shibboleth/shibboleth/conf/staging/attrChecker.html
+++ b/nginx_shibboleth/shibboleth/conf/staging/attrChecker.html
@@ -130,7 +130,7 @@ Please contact your home organisations helpdesk (here: <span id="support2"><shib
           <a id="email" class="btn btn-primary btn-large" href="#">Report Problem to your Home Organisation's Helpdesk</a>
 		  <br>
 		  <br>
-          <a id="gesis_notebooks_home" class="btn btn-warning btn-large" href="https://notebooks-test.gesis.org">Go back to GESIS Notebooks Test</a>
+          <a id="gesis_notebooks_home" class="btn btn-warning btn-large" href="https://notebooks-test.gesis.org">Go back to GESIS Notebooks (staging)</a>
         </div>
       </div>
     </div>
