--- a/load_balancer/static/maintenance.html
+++ b/load_balancer/static/maintenance.html
@@ -7,6 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="JupyterHub - GESIS Notebooks (beta)">
     <link href="/static/vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet"/>
+    <script src="/static/vendor/jquery-3.2.1.min.js"></script>
     <link href="/static/notebooks.css?v=2d539830a4564d24ac20ff705ae32cfa" rel="stylesheet"/>
     <link id="favicon" rel="shortcut icon" type="image/png" href="/static/images/logo/logo.png?v=2d539830a4564d24ac20ff705ae32cfa"/>
 
