--- a/load_balancer/static/maintenance.html
+++ b/load_balancer/static/maintenance.html
@@ -2,14 +2,15 @@
 <html>
 <head>
     <meta charset="utf-8">
-    <title>GESIS Notebooks (beta)</title>
     <meta http-equiv="X-UA-Compatible" content="chrome=1">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="JupyterHub - GESIS Notebooks (beta)">
+    {# The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags #}
+    <title>GESIS Notebooks (beta)</title>
+    <meta name="description" content="GESIS Notebooks is an online service for researchers in the Social Sciences to publish and execute data-driven research designs.">
     <link href="/static/vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet"/>
     <script src="/static/vendor/jquery-3.2.1.min.js"></script>
-    <link href="/static/notebooks.css?v=2d539830a4564d24ac20ff705ae32cfa" rel="stylesheet"/>
-    <link id="favicon" rel="shortcut icon" type="image/png" href="/static/images/logo/logo.png?v=2d539830a4564d24ac20ff705ae32cfa"/>
+    <link href="/static/notebooks.css?v=2d539830a4563d24ac20ff705ae32cfa" rel="stylesheet"/>
+    <link id="favicon" rel="shortcut icon" type="image/png" href="/static/images/logo/logo.png?v=2d539830a4563d24ac20ff705ae32cfa"/>
 
 
     <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
@@ -27,8 +28,8 @@
             <div id="header-container" class="container">
                 <div class="navbar-header">
                     <a class="navbar-brand" href="https://www.gesis.org/en/home/">
-                        <img src="/static/images/gs_home_logo_en.svg?v=2d539830a4564d24ac20ff705ae32cfa" class="hidden-sm hidden-xs" width="200" height="37">
-                        <img src="/static/images/gs_small_logo_de.svg?v=2d539830a4564d24ac20ff705ae32cfa" class="visible-sm visible-xs">
+                        <img src="/static/images/gs_home_logo_en.svg?v=2d539830a4563d24ac20ff705ae32cfa" class="hidden-sm hidden-xs" width="200" height="37">
+                        <img src="/static/images/gs_small_logo_de.svg?v=2d539830a4563d24ac20ff705ae32cfa" class="visible-sm visible-xs">
                     </a>
                     <div class="pull-right visible-xs hidden-sm hidden-md hidden-lg">
                         <ul class="nav nav-pills pull-left ">
@@ -56,7 +57,7 @@
                 </div>
                 <div id="header_banner">
                     <a href="/">
-                        <img src="/static/images/logo/logo_text_2.png?v=2d539830a4564d24ac20ff705ae32cfa"
+                        <img src="/static/images/logo/logo_text_2.png?v=2d539830a4563d24ac20ff705ae32cfa"
                              class="img-responsive" alt="To GESIS Notebooks Homepage"
                              title="To GESIS Notebooks Homepage">
                     </a>
@@ -107,7 +108,7 @@
 <footer class="footer">
     <div class="container footer-container">
       <span class="footer-span">
-          <img src="/static/images/leibniz_logo_en_white.svg?v=2d539830a4564d24ac20ff705ae32cfa" width="78" height="54"
+          <img src="/static/images/leibniz_logo_en_white.svg?v=2d539830a4563d24ac20ff705ae32cfa" width="78" height="54"
                alt="Leibniz Logo"/>
       </span>
         <span class="footer-span" style="padding-right: 0;">
@@ -125,6 +126,6 @@
     </div>
 </footer>
 
-<script src="/static/gesis_nav.js?v=2d539830a4564d24ac20ff705ae32cfa"></script>
+<script src="/static/gesis_nav.js?v=2d539830a4563d24ac20ff705ae32cfa"></script>
 </body>
 </html>
