no css inside html files, use only css files for that. divide notebooks.css, so we have separate css files for gesishub and gesisbinder and also for faq and about pages.

--- a/load_balancer/static/maintenance.html
+++ b/load_balancer/static/maintenance.html
@@ -22,9 +22,9 @@
 </head>
 
 <body>
-<header style="background-color: #333;">
+<header>
     <div role="navigation" class="navbar navbar-default navbar-static-top">
-        <div style="background-color: #333;">
+        <div>
             <div id="header-container" class="container">
                 <div class="navbar-header">
                     <a class="navbar-brand" href="https://www.gesis.org/en/home/">
@@ -34,7 +34,7 @@
                     <div class="pull-right visible-xs hidden-sm hidden-md hidden-lg">
                         <ul class="nav nav-pills pull-left ">
                             <li>
-                                <a href="/about/" style="display: inline; padding: 0;">
+                                <a class="header-icon-link" href="/about/">
                                     <button class="navbar-toggle navbar-link">
                                         <b aria-hidden="true" class="visible-xs glyphicon glyphicon-question-sign"></b>
                                     </button>
@@ -70,8 +70,7 @@
 <div id="nav-container" class="container">
     <div class="row">
         <nav class="navbar navbar-default">
-            <div class="container-fluid"
-                 style="color: #58748f; background-color: #cdd5dd; border: none; border-radius: 0; padding: 0;">
+            <div class="nav-main-container container-fluid">
                 <div>
                     <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar"
                             aria-expanded="false" aria-controls="navbar">
@@ -81,7 +80,7 @@
                         <span class="icon-bar"></span>
                     </button>
                 </div>
-                <div id="navbar" class="navbar-collapse collapse" style="border-color: #e7e7e7;">
+                <div id="navbar" class="navbar-collapse collapse">
                     <ul class="nav navbar-nav" id="navbar-list">
                         <li><a href="/" id="navbar-active-a" class="gs_active_sub">Home</a></li>
                         <li><a href="/binder/">Binder</a></li>
@@ -95,7 +94,7 @@
 </div>
 
 <div id="main-container" class="container">
-    <div style="margin: 2em; text-align: center;">
+    <div class="maintenance">
         <h1>
             503 : Under maintenance
         </h1>
@@ -111,10 +110,10 @@
           <img src="/static/images/leibniz_logo_en_white.svg?v=2d539830a4563d24ac20ff705ae32cfa" width="78" height="54"
                alt="Leibniz Logo"/>
       </span>
-        <span class="footer-span" style="padding-right: 0;">
+        <span class="footer-span-no-padding">
           <a class="footer-link" href="https://www.gesis.org/en/institute/imprint/">Imprint</a> |
       </span>
-        <span class="footer-span" style="padding-right: 0;">
+        <span class="footer-span-no-padding">
           <a class="footer-link" href="https://www.gesis.org/en/institute/data-protection/">Data protection</a> |
       </span>
         <span class="footer-span">
