--- a/load_balancer/static/maintenance.html
+++ b/load_balancer/static/maintenance.html
@@ -9,8 +9,8 @@
     <meta name="description" content="GESIS Notebooks is an online service for researchers in the Social Sciences to publish and execute data-driven research designs.">
     <link href="/static/vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet" />
     <script src="/static/vendor/jquery-3.2.1.min.js"></script>
-    <link href="/static/notebooks.css?v=68d5a219aa684c9c8fb3ca477c69df80" rel="stylesheet" />
-    <link href="/static/hub.css?v=68d5a219aa684c9c8fb3ca477c69df80" rel="stylesheet" />
+    <link href="/static/styles/notebooks.css?v=68d5a219aa684c9c8fb3ca477c69df80" rel="stylesheet" />
+    <link href="/static/styles/hub.css?v=68d5a219aa684c9c8fb3ca477c69df80" rel="stylesheet" />
     <link id="favicon" rel="shortcut icon" type="image/png" href="/static/images/logo/logo.png?v=68d5a219aa684c9c8fb3ca477c69df80" />
 
     <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
@@ -119,6 +119,6 @@
     </div>
 </footer>
 
-<script src="/static/gesis_nav.js?v=68d5a219aa684c9c8fb3ca477c69df80"></script>
+<script src="/static/scripts/gesis_nav.js?v=68d5a219aa684c9c8fb3ca477c69df80"></script>
 </body>
 </html>
