update the maintenance page text to include link to status page

--- a/load_balancer/static/maintenance.html
+++ b/load_balancer/static/maintenance.html
@@ -95,7 +95,7 @@
 <div id="main-container" class="container">
 <div class="maintenance">
     <h1>503 : Under maintenance</h1>
-    <p>This service will be back soon.</p>
+    <p>This service will be back soon, you can track the current status on the <a href="https://gesisnotebooks.betteruptime.com">Status Page</a>.</p>
 </div>
 </div>
 
