fix links to faq/terms/about pages

--- a/load_balancer/static/faq.html
+++ b/load_balancer/static/faq.html
@@ -93,7 +93,7 @@ var et_areas = encodeURIComponent("NOTEBOOKS/GESISHub");
                         <ul class="nav nav-pills pull-left ">
                             
                             <li>
-                                <a class="header-icon-link" href="/about/">
+                                <a class="header-icon-link" href="/about.html">
                                     <button class="navbar-toggle navbar-link">
                                         <b aria-hidden="true" class="visible-xs glyphicon glyphicon-question-sign"></b>
                                     </button>
@@ -106,7 +106,7 @@ var et_areas = encodeURIComponent("NOTEBOOKS/GESISHub");
                     <ul class="nav navbar-nav pull-left">
                         
                         <li>
-                            <a href="/about/">
+                            <a href="/about.html">
                                 <span class="top-menu-item hidden-xs">
                               <span aria-hidden="true" class="glyphicon glyphicon-question-sign"></span>
                               About
@@ -433,7 +433,7 @@ var et_areas = encodeURIComponent("NOTEBOOKS/GESISHub");
           <a class="footer-link" href="https://www.gesis.org/en/institute/data-protection/">Data protection</a> |
       </span>
         <span class="footer-span-no-padding">
-          <a class="footer-link" href="/terms_of_use/">Terms of Use</a> |
+          <a class="footer-link" href="/terms.html">Terms of Use</a> |
       </span>
         <span class="footer-span">
           <a class="footer-link" href="https://gesisnotebooks.betteruptime.com">Status</a>
