fix links to faq

--- a/load_balancer/static/faq.html
+++ b/load_balancer/static/faq.html
@@ -156,7 +156,7 @@ var et_areas = encodeURIComponent("NOTEBOOKS/GESISHub");
                         
                         <li><a href="/binder/" >Binder</a></li>
                        <li><a href="/gallery/" >Gallery</a></li>
-                        <li><a href="/faq/" id="navbar-active-a" class="gs_active_sub">FAQ</a></li>
+                        <li><a href="/faq.html" id="navbar-active-a" class="gs_active_sub">FAQ</a></li>
                     </ul>
                 </div>
             </div>
