--- a/load_balancer/static/terms.html
+++ b/load_balancer/static/terms.html
@@ -134,7 +134,7 @@ var et_areas = encodeURIComponent("NOTEBOOKS/GESISHub");
                         
                         <li><a href="/binder/" >Binder</a></li>
                        <li><a href="/gallery/" >Gallery</a></li>
-                        <li><a href="/faq/" >FAQ</a></li>
+                        <li><a href="/faq.html" >FAQ</a></li>
                     </ul>
                 </div>
             </div>
